apps/octobot/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: octobot
  namespace: octobot
  labels:
    app.kubernetes.io/name: octobot
spec:
  selector:
    app.kubernetes.io/name: octobot
  ports:
    - port: 5001
      targetPort: 5001
