apps/octobot/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: octobot
  namespace: octobot
  labels:
    app.kubernetes.io/name: octobot
  annotations:
    gethomepage.dev/name: octobot
    gethomepage.dev/description: Trading bot
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Finance
    gethomepage.dev/icon: bitcoin.png
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=octobot"
spec:
  tls:
    - hosts:
        - octobot.totorinho.duckdns.org
      secretName: duckdns-wildcard-cert-totorinho.duckdns.org
  rules:
    - host: octobot.totorinho.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: octobot
                port:
                  number: 5001
